# CloakChat

./: .gitignore  README.md  config-example.json  config.json  diagrams.md  docs.md  pyproject.toml  requirements.txt  simple.md  start.bat  start.ps1  start.sh  user_settings.json
.archive/: test_facade.py
.archive/cleanup_20260318_072800/: .gitignore  AGENTS.md  GEMINI.md  MIGRATION_GUIDE.md  QUICKSTART.md  launch-backend.py  package-lock.json  package.json  pyproject.toml  start-fresh.sh
.archive/cleanup_20260318_072800/.proj-context/extras/: eval.md  model_mem.md  project_history.md
.archive/cleanup_20260318_072800/eval/: generate_dataset.py
.archive/cleanup_20260318_072800/tests/: test_simple.py
.archive/cleanup_20260318_072800/tests/backend/: test_chat.py  test_config.py  test_strategies.py
.archive/cleanup_20260318_072800/tests/core/: conftest.py  test_benchmark.py  test_builders.py  test_comparator.py  test_config.py  test_core_detection.py  test_core_reconstruction.py  test_core_replacement.py  test_entities.py  test_evaluation.py  test_llm_parsing.py  test_llm_providers.py  test_merging.py  test_messages.py  test_pipeline_integration.py  test_pipeline_runner.py  test_pipeline_state.py  test_registry.py  test_steps.py  test_strategies.py
backend/: __init__.py  config.py  debug_trace.py  deps.py  main.py  playbook.py
core/: README.md  __init__.py  anonymize.py  cloud.py  detect.py  detection.py  fake_data.py  llm.py  pipeline.py  privacy_agent.py  reconstruction.py  replacement.py  types.py  validate.py  verify.py
frontend/: README.md  index.html  (+5 more)
(+72 files in other folders)
